--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 						</div>
 					</div>
 				</div>
-
+				<!--Master Suite-->
 				<div class="feature-full-1col" style="flex-direction: row-reverse;">
 					<div class="image" style="background-image: url(assets/webp/MASTER_SUITE.webp);">
 						<div class="descrip text-center">
@@ -292,7 +292,7 @@
 						<p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 					</div>
 				</div>
-
+				<!--Suite Tina Antigua-->
 				<div class="feature-full-2col" style="flex-direction: revert">
 					<div class="f-hotel">
 						<div class="image" style="background-image: url(https://media.xmlcal.com/pic/p0003/6868/41.png);">
