--- a/rooms.html
+++ b/rooms.html
@@ -91,7 +91,7 @@
 
     </div>
     <!-- end:fh5co-header -->
-    <div class="fh5co-parallax" style="background-image: url(./assets/webp/EJECUTIVA.webp);" data-stellar-background-ratio="0.5">
+    <div class="fh5co-parallax" style="background-image: url(./assets/webp/EJECUTIVA.webp); background-size: contain;" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -111,7 +111,7 @@
           <!--Ejecutiva-->
           <div class="col-md-4">
             <div class="hotel-content">
-              <div class="hotel-grid" style="background-image: url(./assets/webp/EJECUTIVA_1.webp); background-size: contain;">
+              <div class="hotel-grid" style="background-image: url(./assets/webp/EJECUTIVA_1.webp);">
                 <div class="price"><small>Reserva por</small><span>$1,087.87/noche</span></div>
                 <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Reserva aquí</a>
               </div>
@@ -124,7 +124,7 @@
           <!--Deluxe Cama Queen-->
           <div class="col-md-4">
             <div class="hotel-content">
-              <div class="hotel-grid" style="background-image: url(./assets/webp/DELUXE_QUEEN.png); background-size: contain;">
+              <div class="hotel-grid" style="background-image: url(./assets/webp/DELUXE_QUEEN.png);">
                 <div class="price"><small>Reserva por</small><span>$1,221.76/noche</span></div>
                 <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Reserva aquí</a>
               </div>
@@ -147,31 +147,33 @@
               </div>
             </div>
           </div>
+          <!--Máster Siute-->
+          <div class="col-md-4">
+            <div class="hotel-content">
+              <div class="hotel-grid" style="background-image: url(./assets/webp/MASTER_SUITE_3.webp);">
+                <div class="price"><small>Reserva por</small><span>$XX/noche</span></div>
+                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Reserva aquí</a>
+              </div>
+              <div class="desc">
+                <h3><a href="#">Master Suite</a></h3>
+                <p>Habitación amplia con una terraza privada con jacuzzi, en ella encontrarás la comodidad necesaria para relajarte.</p>
+              </div>
+            </div>
+          </div>
+          <!--Suite Tina Antigua-->
+          <div class="col-md-4">
+            <div class="hotel-content">
+              <div class="hotel-grid" style="background-image: url(https://media.xmlcal.com/pic/p0003/6868/41.png);">
+                <div class="price"><small>Reserva por</small><span>$1,589.96/noche</span></div>
+                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Reserva aquí</a>
+              </div>
+              <div class="desc">
+                <h3><a href="#">Suite Tina Antigua</a></h3>
+                <p>En esta habitación podrás encontrar amplitud, comodidad y te enamorarás de su tina antigua que da un estilo vintage. Vista exterior a la calle principal del hotel.</p>
+              </div>
+            </div>
+          </div>
           <!---->
-          <div class="col-md-4">
-            <div class="hotel-content">
-              <div class="hotel-grid" style="background-image: url(images/image-4.jpg);">
-                <div class="price"><small>For as low as</small><span>$100/night</span></div>
-                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Book Now</a>
-              </div>
-              <div class="desc">
-                <h3><a href="#">Hotel Name</a></h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="hotel-content">
-              <div class="hotel-grid" style="background-image: url(images/image-5.jpg);">
-                <div class="price"><small>For as low as</small><span>$100/night</span></div>
-                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Book Now</a>
-              </div>
-              <div class="desc">
-                <h3><a href="#">Hotel Name</a></h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-              </div>
-            </div>
-          </div>
           <div class="col-md-4">
             <div class="hotel-content">
               <div class="hotel-grid" style="background-image: url(images/image-6.jpg);">
