--- a/rooms.html
+++ b/rooms.html
@@ -24,7 +24,7 @@
   <meta name="twitter:card" content="" />
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="shortcut icon" href="assets/puntomx_ico.ico">
   <!-- <link href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700italic,900,700,900italic' rel='stylesheet' type='text/css'> -->
 
   <!-- Stylesheets -->
@@ -66,8 +66,9 @@
       <header id="fh5co-header-section">
         <div class="container">
           <div class="nav-header">
-            <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-            <h1 id="fh5co-logo"><a href="index.html">LOGO</a></h1>
+            <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i>
+            <h1 id="fh5co-logo"><a href="index.html"><img src="assets/puntomx_ico.ico" alt="Logo de Hoteles Punto MX" height="80px" srcset=""></a></h1>
+            <!--<h1 id="fh5co-logo"><a href="index.html">LOGO</a></h1>-->
             <nav id="fh5co-menu-wrap" role="navigation">
               <ul class="sf-menu" id="fh5co-primary-menu">
                 <li><a class="active" href="index.html">Inicio</a></li>
@@ -91,14 +92,14 @@
 
     </div>
     <!-- end:fh5co-header -->
-    <div class="fh5co-parallax" style="background-image: url(./assets/webp/EJECUTIVA.webp); background-size: contain;" data-stellar-background-ratio="0.5">
+    <div class="fh5co-parallax" style="background-image: url(./assets/webp/EJECUTIVA.webp); background-position: top center !important;" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-md-12 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
             <div class="fh5co-intro fh5co-table-cell">
               <h1 class="text-center">Conoce nuestras Habitaciones</h1>
-              <p>y reserva</p>
+              <small>Y RESERVA YA</small>
             </div>
           </div>
         </div>
@@ -112,7 +113,7 @@
           <div class="col-md-4">
             <div class="hotel-content">
               <div class="hotel-grid" style="background-image: url(./assets/webp/EJECUTIVA_1.webp);">
-                <div class="price"><small>Reserva por</small><span>$1,087.87/noche</span></div>
+                <div class="price"><small>Reserva por</small><span style="font-size: 1.3rem;">$1,087.87/noche</span></div>
                 <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Reserva aquí</a>
               </div>
               <div class="desc">
