--- a/rooms.html
+++ b/rooms.html
@@ -165,7 +165,7 @@
           <div class="col-md-4">
             <div class="hotel-content">
               <div class="hotel-grid" style="background-image: url(https://media.xmlcal.com/pic/p0003/6868/41.png);">
-                <div class="price"><small>Reserva por</small><span>$1,589.96/noche</span></div>
+                <div class="price"><small>Reserva por</small><span style="font-size: 1.3rem">$1,589.96/noche</span></div>
                 <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Reserva aquí</a>
               </div>
               <div class="desc">
@@ -174,16 +174,16 @@
               </div>
             </div>
           </div>
-          <!---->
+          <!--Siute Jacuzzi-->
           <div class="col-md-4">
             <div class="hotel-content">
               <div class="hotel-grid" style="background-image: url(images/image-6.jpg);">
-                <div class="price"><small>For as low as</small><span>$100/night</span></div>
-                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Book Now</a>
+                <div class="price"><small>Reserva por</small><span style="font-size: 1.3rem">$1,589.96/noche</span></div>
+                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Reserva aquí</a>
               </div>
               <div class="desc">
-                <h3><a href="#">Hotel Name</a></h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <h3><a href="#">Suite Jacuzzi</a></h3>
+                <p>Habitación amplia, diseñada para que puedas relajarte tanto en su amplia cama como en su jacuzzi de hidromasaje, Vista exterior a la calle principal del hotel.</p>
               </div>
             </div>
           </div>
