--- a/rooms.html
+++ b/rooms.html
@@ -177,7 +177,7 @@
           <!--Siute Jacuzzi-->
           <div class="col-md-4">
             <div class="hotel-content">
-              <div class="hotel-grid" style="background-image: url(images/image-6.jpg);">
+              <div class="hotel-grid" style="background-image: url(./assets/webp/JACUZZI.webp);">
                 <div class="price"><small>Reserva por</small><span style="font-size: 1.3rem">$1,589.96/noche</span></div>
                 <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Reserva aquí</a>
               </div>
