--- a/rooms.html
+++ b/rooms.html
@@ -92,7 +92,7 @@
 
     </div>
     <!-- end:fh5co-header -->
-    <div class="fh5co-parallax" style="background-image: url(./assets/webp/EJECUTIVA.webp); background-position: top center !important;" data-stellar-background-ratio="0.5">
+    <div class="fh5co-parallax" style="background-image: url(./assets/webp/EJECUTIVA.webp); background-position: 0 0!important; background-repeat: no-repeat;" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
