--- a/rooms.html
+++ b/rooms.html
@@ -99,7 +99,7 @@
           <div class="col-md-12 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
             <div class="fh5co-intro fh5co-table-cell">
               <h1 class="text-center">Conoce nuestras Habitaciones</h1>
-              <small>Y RESERVA YA</small>
+              <p>Y Reserva Ahora</p>
             </div>
           </div>
         </div>
