Correción botón flotante

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 		   			</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(assets/webp/RECEPCION.webp); background-size: contain;">
+		   	<li style="background-image: url(assets/webp/RECEPCION.webp);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="col-md-12 col-md-offset-0 text-center slider-text">
