--- a/rooms.html
+++ b/rooms.html
@@ -92,7 +92,8 @@
 
     </div>
     <!-- end:fh5co-header -->
-    <div class="fh5co-parallax" style="background-image: url(./assets/webp/EJECUTIVA.webp); background-position: 0 0!important; background-repeat: no-repeat;" data-stellar-background-ratio="0.5">
+    <!--<div class="fh5co-parallax" style="background-image: url(./assets/webp/EJECUTIVA.webp); background-position: 0 0!important; background-repeat: no-repeat;" data-stellar-background-ratio="0.5">-->
+    <div class="fh5co-parallax" style="background: linear-gradient( rgba(0, 0, 0, 0.4) 100%, rgba(0, 0, 0, 0.2)100%),url(./assets/webp/EJECUTIVA.webp); background-size: contain, cover; background-position: 0 bottom,0 bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -114,7 +115,7 @@
             <div class="hotel-content">
               <div class="hotel-grid" style="background-image: url(./assets/webp/EJECUTIVA_1.webp);">
                 <div class="price"><small>Reserva por</small><span style="font-size: 1.3rem;">$1,087.87/noche</span></div>
-                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Reserva aquí</a>
+                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank"><i class="ti-calendar"></i> Reserva aquí</a>
               </div>
               <div class="desc">
                 <h3><a href="#">Ejecutiva</a></h3>
@@ -126,8 +127,8 @@
           <div class="col-md-4">
             <div class="hotel-content">
               <div class="hotel-grid" style="background-image: url(./assets/webp/DELUXE_QUEEN.png);">
-                <div class="price"><small>Reserva por</small><span>$1,221.76/noche</span></div>
-                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Reserva aquí</a>
+                <div class="price"><small>Reserva por</small><span style="font-size: 1.3rem;">$1,221.76/noche</span></div>
+                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank"><i class="ti-calendar"></i> Reserva aquí</a>
               </div>
               <div class="desc">
                 <h3><a href="#">Deluxe Cama Queen</a></h3>
@@ -139,8 +140,8 @@
           <div class="col-md-4">
             <div class="hotel-content">
               <div class="hotel-grid" style="background-image: url(./assets/webp/DELUXE_2_CAMAS_2.webp);">
-                <div class="price"><small>Reserva por</small><span>$1,297.08/noche</span></div>
-                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Book Now</a>
+                <div class="price"><small>Reserva por</small><span style="font-size: 1.3rem;">$1,297.08/noche</span></div>
+                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank"><i class="ti-calendar"></i> Reserva aquí</a>
               </div>
               <div class="desc">
                 <h3><a href="#">Deluxe Dos Camas</a></h3>
@@ -152,8 +153,8 @@
           <div class="col-md-4">
             <div class="hotel-content">
               <div class="hotel-grid" style="background-image: url(./assets/webp/MASTER_SUITE_3.webp);">
-                <div class="price"><small>Reserva por</small><span>$XX/noche</span></div>
-                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Reserva aquí</a>
+                <div class="price"><small>Reserva por</small><span style="font-size: 1.3rem;">$XX/noche</span></div>
+                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank"><i class="ti-calendar"></i> Reserva aquí</a>
               </div>
               <div class="desc">
                 <h3><a href="#">Master Suite</a></h3>
@@ -166,7 +167,7 @@
             <div class="hotel-content">
               <div class="hotel-grid" style="background-image: url(https://media.xmlcal.com/pic/p0003/6868/41.png);">
                 <div class="price"><small>Reserva por</small><span style="font-size: 1.3rem">$1,589.96/noche</span></div>
-                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Reserva aquí</a>
+                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank"><i class="ti-calendar"></i> Reserva aquí</a>
               </div>
               <div class="desc">
                 <h3><a href="#">Suite Tina Antigua</a></h3>
@@ -179,7 +180,7 @@
             <div class="hotel-content">
               <div class="hotel-grid" style="background-image: url(./assets/webp/JACUZZI.webp);">
                 <div class="price"><small>Reserva por</small><span style="font-size: 1.3rem">$1,589.96/noche</span></div>
-                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Reserva aquí</a>
+                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank"><i class="ti-calendar"></i> Reserva aquí</a>
               </div>
               <div class="desc">
                 <h3><a href="#">Suite Jacuzzi</a></h3>
@@ -197,7 +198,7 @@
         <div class="row">
           <div class="col-md-3">
             <div class="copyright">
-              <p><small>&copy; Propuesta EKNR<br> Todos los derechos reservados. </small> <br>
+              <p><small>&copy; Hotel Punto MX<br> Todos los derechos reservados. </small> <br>
               </p>
             </div>
           </div>
