Actualizando room.html y services.html

--- a/rooms.html
+++ b/rooms.html
@@ -71,11 +71,11 @@
             <!--<h1 id="fh5co-logo"><a href="index.html">LOGO</a></h1>-->
             <nav id="fh5co-menu-wrap" role="navigation">
               <ul class="sf-menu" id="fh5co-primary-menu">
-                <li><a class="active" href="index.html">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li>
-                  <a href="#" class="fh5co-sub-ddown">Hotel</a>
+                  <a href="#" class="active" class="fh5co-sub-ddown">Hotel</a>
                   <ul class="fh5co-sub-menu">
-                    <li><a href="rooms.html">Habitaciones</a></li>
+                    <li><a href="rooms.html" class="active">Habitaciones</a></li>
                     <li><a href="services.html">Servicios & Amenidades</a></li>
                     <li><a href="restaurant.html">Restaurante MX</a></li>
                     <li><a href="cafe.html">Café MX</a></li>
