--- a/services.html
+++ b/services.html
@@ -68,7 +68,7 @@
                 <div class="container">
                     <div class="nav-header">
                         <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-                        <h1 id="fh5co-logo"><a href="index.html">LOGO</a></h1>
+                        <h1 id="fh5co-logo"><a href="index.html"><img src="assets/puntomx_ico.ico" alt="Logo de Hoteles Punto MX" height="80px" srcset=""></a></h1>
                         <nav id="fh5co-menu-wrap" role="navigation">
                             <ul class="sf-menu" id="fh5co-primary-menu">
                                 <li><a class="active" href="index.html">Inicio</a></li>
@@ -98,15 +98,73 @@
                 <div class="row">
                     <div class="col-md-12 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
                         <div class="fh5co-intro fh5co-table-cell">
-                            <h1 class="text-center">Servicios</h1>
-                            <p>Contenido adaptable -  Por definir</p>
+                            <p style="font-size: 1.7rem;">Déjanos deleitarte con nuestros:</p>
+                            <h1 class="text-center">Servicios y Amenidades</h1>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div id="fh5co-hotel-section">
+        <div id="fh5co-services-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="services">
+                            <span><i class="ti-location-pin"></i></span>
+                            <div class="desc">
+                                <h3>Accessible Location</h3>
+                                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="services">
+                            <span><i class="ti-alarm-clock"></i></span>
+                            <div class="desc">
+                                <h3>Open 24/7</h3>
+                                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="services">
+                            <span><i class="ti-calendar"></i></span>
+                            <div class="desc">
+                                <h3>Reservation</h3>
+                                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="services">
+                            <span><i class="ti-user"></i></span>
+                            <div class="desc">
+                                <h3>Friendly Staff</h3>
+                                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="services">
+                            <span><i class="ti-signal"></i></span>
+                            <div class="desc">
+                                <h3>Free Wifi</h3>
+                                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="services">
+                            <span><i class="ti-location-pin"></i></span>
+                            <div class="desc">
+                                <h3>Accessible Location</h3>
+                                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
 
