--- a/services.html
+++ b/services.html
@@ -73,10 +73,10 @@
                             <ul class="sf-menu" id="fh5co-primary-menu">
                                 <li><a class="active" href="index.html">Inicio</a></li>
                                 <li>
-                                    <a href="#" class="fh5co-sub-ddown">Hotel</a>
+                                    <a href="#" class="fh5co-sub-ddown active">Hotel</a>
                                     <ul class="fh5co-sub-menu">
                                         <li><a href="rooms.html">Habitaciones</a></li>
-                                        <li><a href="services.html">Servicios & Amenidades</a></li>
+                                        <li><a href="services.html" class="active">Servicios & Amenidades</a></li>
                                         <li><a href="restaurant.html">Restaurante MX</a></li>
                                         <li><a href="cafe.html">Café MX</a></li>
                                     </ul>
@@ -113,7 +113,7 @@
                         <div class="services">
                             <span><i class="ti-location-pin"></i></span>
                             <div class="desc">
-                                <h3>Accessible Location</h3>
+                                <h3>Ubicación (?)</h3>
                                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
                             </div>
                         </div>
@@ -122,7 +122,7 @@
                         <div class="services">
                             <span><i class="ti-alarm-clock"></i></span>
                             <div class="desc">
-                                <h3>Open 24/7</h3>
+                                <h3>Horario 24/7 (?)</h3>
                                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
                             </div>
                         </div>
@@ -131,7 +131,7 @@
                         <div class="services">
                             <span><i class="ti-calendar"></i></span>
                             <div class="desc">
-                                <h3>Reservation</h3>
+                                <h3>Reservación (?)</h3>
                                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
                             </div>
                         </div>
@@ -140,7 +140,7 @@
                         <div class="services">
                             <span><i class="ti-user"></i></span>
                             <div class="desc">
-                                <h3>Friendly Staff</h3>
+                                <h3>(?))</h3>
                                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
                             </div>
                         </div>
@@ -149,7 +149,7 @@
                         <div class="services">
                             <span><i class="ti-signal"></i></span>
                             <div class="desc">
-                                <h3>Free Wifi</h3>
+                                <h3>WiFi</h3>
                                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
                             </div>
                         </div>
@@ -158,7 +158,7 @@
                         <div class="services">
                             <span><i class="ti-location-pin"></i></span>
                             <div class="desc">
-                                <h3>Accessible Location</h3>
+                                <h3>Ubicación (?)</h3>
                                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
                             </div>
                         </div>
@@ -173,7 +173,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="copyright">
-                            <p><small>&copy; Propuesta EKNR<br> Todos los derechos reservados. </small> <br>
+                            <p><small>&copy; Hotel Punto MX<br> Todos los derechos reservados. </small> <br>
                             </p>
                         </div>
                     </div>
@@ -184,17 +184,17 @@
                                 <ul class="link">
                                     <li><a href="#">Acerca de Nosotros</a></li>
                                     <li><a href="#">Sucursal</a></li>
-                                    <li><a href="#">Lorem ipsum</a></li>
-                                    <li><a href="#">Lorem ipsum</a></li>
+                                    <li><a href="#">Bolsa de Trabajo</a></li>
+                                    <li><a href="#">Aviso de Privacidad</a></li>
                                 </ul>
                             </div>
                             <div class="col-md-6">
                                 <h3>Comodidades</h3>
                                 <ul class="link">
-                                    <li><a href="#">Resturant</a></li>
-                                    <li><a href="#">Bars</a></li>
-                                    <li><a href="#">Estacionamiento</a></li>
-                                    <li><a href="#">Pet Friendly</a></li>
+                                    <li><a href="restaurant.html">Resturant</a></li>
+                                    <li><a href="cafe.html">Cafetería</a></li>
+                                    <li><a href="services.html">Estacionamiento</a></li>
+                                    <li><a href="services.html">Pet Friendly</a></li>
                                     <!--<li><a href="#">5item</a></li>
                                     <li><a href="#">6item</a></li>-->
                                 </ul>
@@ -214,10 +214,11 @@
                     <div class="col-md-3">
                         <ul class="social-icons">
                             <li>
-                                <a href="#"><i class="icon-twitter-with-circle"></i></a>
-                                <a href="#"><i class="icon-facebook-with-circle"></i></a>
-                                <a href="#"><i class="icon-instagram-with-circle"></i></a>
-                                <a href="#"><i class="icon-linkedin-with-circle"></i></a>
+                                <a href="https://twitter.com/hotel_puntomx?lang=es" target="_blank"><i class="icon-twitter-with-circle"></i></a>
+                                <a href="https://www.facebook.com/HotelPuntoMX/" target="_blank"><i class="icon-facebook-with-circle"></i></a>
+                                <a href="https://www.instagram.com/hotelpuntomx/" target="_blank"><i class="icon-instagram-with-circle"></i></a>
+                                <!--<a href="#"><i class="fa fa-tripadvisor"></i></a>-->
+                                <!--<a href="#"><i class="icon-linkedin-with-circle"></i></a>-->
                             </li>
                         </ul>
                     </div>
