--- a/services.html
+++ b/services.html
@@ -71,7 +71,7 @@
                         <h1 id="fh5co-logo"><a href="index.html"><img src="assets/puntomx_ico.ico" alt="Logo de Hoteles Punto MX" height="80px" srcset=""></a></h1>
                         <nav id="fh5co-menu-wrap" role="navigation">
                             <ul class="sf-menu" id="fh5co-primary-menu">
-                                <li><a class="active" href="index.html">Inicio</a></li>
+                                <li><a href="index.html">Inicio</a></li>
                                 <li>
                                     <a href="#" class="fh5co-sub-ddown active">Hotel</a>
                                     <ul class="fh5co-sub-menu">
