--- a/rooms.html
+++ b/rooms.html
@@ -175,7 +175,7 @@
               </div>
             </div>
           </div>
-          <!--Siute Jacuzzi-->
+          <!--Suite Jacuzzi-->
           <div class="col-md-4">
             <div class="hotel-content">
               <div class="hotel-grid" style="background-image: url(./assets/webp/JACUZZI.webp);">
@@ -185,6 +185,19 @@
               <div class="desc">
                 <h3><a href="#">Suite Jacuzzi</a></h3>
                 <p>Habitación amplia, diseñada para que puedas relajarte tanto en su amplia cama como en su jacuzzi de hidromasaje, Vista exterior a la calle principal del hotel.</p>
+              </div>
+            </div>
+          </div>
+          <!--Junior Suite-->
+          <div class="col-md-4 col-md-offset-4">
+            <div class="hotel-content">
+              <div class="hotel-grid" style="background-image: url(https://media.xmlcal.com/pic/p0003/6868/85.png);">
+                <div class="price"><small>Reserva por</small><span style="font-size: 1.3rem">$1,380.76/noche</span></div>
+                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank"><i class="ti-calendar"></i> Reserva aquí</a>
+              </div>
+              <div class="desc">
+                <h3><a href="#">Junior Suite</a></h3>
+                <p>Habitación amplia con una terraza privada con jacuzzi, en ella encontrarás la comodidad necesaria para relajarte.</p>
               </div>
             </div>
           </div>
