--- a/services.html
+++ b/services.html
@@ -24,7 +24,7 @@
     <meta name="twitter:card" content="" />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="assets/puntomx_ico.ico">
     <!-- <link href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700italic,900,700,900italic' rel='stylesheet' type='text/css'> -->
 
     <!-- Stylesheets -->
@@ -92,7 +92,7 @@
 
         </div>
         <!-- end:fh5co-header -->
-        <div class="fh5co-parallax" style="background-image: url(images/slider1.jpg);" data-stellar-background-ratio="0.5">
+        <div class="fh5co-parallax" style="background: linear-gradient( rgba(0, 0, 0, 0.4) 100%, rgba(0, 0, 0, 0.2)100%),url(./assets/webp/DELUXE_2_CAMAS_5.webp); background-size: contain, cover; background-position: 0 bottom,0 bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
@@ -122,8 +122,8 @@
                         <div class="services">
                             <span><i class="ti-alarm-clock"></i></span>
                             <div class="desc">
-                                <h3>Horario 24/7 (?)</h3>
-                                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                                <h3>Horario 24/7</h3>
+                                <p>Atención al huésped en recepción las 24hrs.</p>
                             </div>
                         </div>
                     </div>
@@ -131,8 +131,8 @@
                         <div class="services">
                             <span><i class="ti-calendar"></i></span>
                             <div class="desc">
-                                <h3>Reservación (?)</h3>
-                                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                                <h3>Pick up / Shuttle</h3>
+                                <p>Servicio de transportación con cargo adicional y previa reservación.</p>
                             </div>
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                             <span><i class="ti-signal"></i></span>
                             <div class="desc">
                                 <h3>WiFi</h3>
-                                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                                <p>WIFI disponible en todas las instalaciones del hotel.</p>
                             </div>
                         </div>
                     </div>
