--- a/services.html
+++ b/services.html
@@ -105,8 +105,20 @@
                 </div>
             </div>
         </div>
-
-        <div id="fh5co-services-section">
+<!----------------------------------------------------->
+        <div id="testimonial" style="height: 300px;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="section-title text-center">
+                            <h2><a href="https://www.tripadvisor.com.mx/Hotel_Review-g150800-d12696075-Reviews-or10-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html#REVIEWS" target="_blank" style="color:#FFF; font-family: 'Lato',sans-serif; font-weight: 300;">Nuestros clientes dicen...</a></h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+<!----------------------------------------------------->
+        <div id="fh5co-services-section" style="margin-top: 250px;">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
@@ -114,7 +126,7 @@
                             <span><i class="ti-location-pin"></i></span>
                             <div class="desc">
                                 <h3>Ubicación (?)</h3>
-                                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                                <p>Lorem ipsum dolor sit amet.</p>
                             </div>
                         </div>
                     </div>
@@ -141,7 +153,7 @@
                             <span><i class="ti-user"></i></span>
                             <div class="desc">
                                 <h3>(?))</h3>
-                                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur.</p>
                             </div>
                         </div>
                     </div>
@@ -159,7 +171,7 @@
                             <span><i class="ti-location-pin"></i></span>
                             <div class="desc">
                                 <h3>Ubicación (?)</h3>
-                                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                                <p>Lorem ipsum dolor sit amet.</p>
                             </div>
                         </div>
                     </div>
