--- a/services.html
+++ b/services.html
@@ -92,7 +92,7 @@
 
         </div>
         <!-- end:fh5co-header -->
-        <div class="fh5co-parallax" style="background: linear-gradient( rgba(0, 0, 0, 0.4) 100%, rgba(0, 0, 0, 0.2)100%),url(./assets/webp/DELUXE_2_CAMAS_5.webp); background-size: contain, cover; background-position: 0 bottom,0 bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
+        <div class="fh5co-parallax" style="background: linear-gradient( rgba(0, 0, 0, 0.4) 100%, rgba(0, 0, 0, 0.2)100%),url(./assets/webp/DELUXE_2_CAMAS_4.webp); background-size: contain, cover; background-position: 0 bottom,0 bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
@@ -106,27 +106,36 @@
             </div>
         </div>
 <!----------------------------------------------------->
-        <div id="testimonial" style="height: 300px;">
+        <div id="fh5co-counter-section" class="fh5co-counters" style="background-color: var(--color-primario);">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12">
-                        <div class="section-title text-center">
-                            <h2><a href="https://www.tripadvisor.com.mx/Hotel_Review-g150800-d12696075-Reviews-or10-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html#REVIEWS" target="_blank" style="color:#FFF; font-family: 'Lato',sans-serif; font-weight: 300;">Nuestros clientes dicen...</a></h2>
-                        </div>
+                    <div class="col-12 text-center myc">
+                        <p class="fh5co-counter-label" style="color: var(--white);">Hotel Punto MX cuenta con 60 cómodas habitaciones con baño privado, diseñadas bajo un estilo moderno (ART DECO) que te permite vivir una experiencia única; 48 habitaciones  son internas, que cuentan con la luz suficiente para su comodidad y además 12 Suites  con una vista externa de la calle República de Uruguay.</p>
+                        <p class="fh5co-counter-label" style="color: var(--white);">El hotel es un espacio 100% libre de humo, sin embargo en nuestra terraza privada podrá disfrutar de una tarde al aire libre.</p>
+                        <p class="fh5co-counter-label" style="color: var(--white);">También podrá disfrutar de nuestra selección especial de platillos como parte del desayuno buffet incluido en su tarifa y, si gusta, más tarde puede deleitarse en la exclusividad de nuestros espacios de restaurante y cafetería.</p>
                     </div>
                 </div>
             </div>
         </div>
 <!----------------------------------------------------->
-        <div id="fh5co-services-section" style="margin-top: 250px;">
+        <div id="fh5co-services-section" style="padding: 3em 0 0 0;">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
                         <div class="services">
+                            <span><i class="ti-calendar"></i></span>
+                            <div class="desc">
+                                <h3>Tarifa preferencial</h3>
+                                <p style="font-size: 1.6rem;">Garantizamos que si reserva directamente con nosotros podrá obtener la tarifa preferencial más baja disponible. Si usted encuentra una tarifa más baja, nosotros la igualamos.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="services">
                             <span><i class="ti-location-pin"></i></span>
                             <div class="desc">
-                                <h3>Ubicación (?)</h3>
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <h3>Tours</h3>
+                                <p style="font-size: 1.6rem;"> Tours especiales y Servicio de transportación (pick up o shuttle, requiere previa reservación) con cargo adicional.</p>
                             </div>
                         </div>
                     </div>
@@ -135,25 +144,16 @@
                             <span><i class="ti-alarm-clock"></i></span>
                             <div class="desc">
                                 <h3>Horario 24/7</h3>
-                                <p>Atención al huésped en recepción las 24hrs.</p>
+                                <p style="font-size: 1.6rem;">Atención al huésped en recepción las 24hrs.<br>Amenidades de cortesía disponibles todos los días de su estancia.<br>Room service 24hrs.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="services">
-                            <span><i class="ti-calendar"></i></span>
+                            <span><i class="ti-star"></i></span>
                             <div class="desc">
-                                <h3>Pick up / Shuttle</h3>
-                                <p>Servicio de transportación con cargo adicional y previa reservación.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="services">
-                            <span><i class="ti-user"></i></span>
-                            <div class="desc">
-                                <h3>(?))</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                                <h3>Amenidades</h3>
+                                <p style="font-size: 1.6rem;">Menú de almohadas sin costo (solicítelo en recepción). / Servicio de lavandería (con cargo adicional). / Aire acondicionado en todas nuestras habitaciones. / Gimnasio.</p>
                             </div>
                         </div>
                     </div>
@@ -168,17 +168,38 @@
                     </div>
                     <div class="col-md-4">
                         <div class="services">
-                            <span><i class="ti-location-pin"></i></span>
+                            <span><i class="ti-key"></i></span>
                             <div class="desc">
-                                <h3>Ubicación (?)</h3>
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <h3>Caja de seguridad</h3>
+                                <p>Contamos con una caja de seguridad en todas las habitaciones.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
+<!------------------------------------------------------------>
+        <div id="fh5co-blog-section" style="padding-top:2rem;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="blog-grid" style="background-image: url(./assets/webp/ROOM_SERVICE.webp);">
+                        </div>
+                        <div class="desc" style="text-align: center;">
+                            <h3><a href="restaurant.html">Conoce nuestro Restaurante MX</a></h3>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="blog-grid" style="background-image: url(./assets/webp/AMENIDADES_2.webp);">
+                        </div>
+                        <div class="desc" style="text-align: center;">
+                            <h3><a href="cafe.html">Visita Cafe MX</a></h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+<!------------------------------------------------------------>
 
         <footer id="footer" class="fh5co-bg-color">
             <div class="container">
