--- a/restaurant.html
+++ b/restaurant.html
@@ -24,7 +24,7 @@
   <meta name="twitter:card" content="" />
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="shortcut icon" href="assets/puntomx_ico.ico">
   <!-- <link href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700italic,900,700,900italic' rel='stylesheet' type='text/css'> -->
 
   <!-- Stylesheets -->
@@ -50,6 +50,7 @@
 
   <!-- Style -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/slider.css">
 
   <!-- Modernizr JS -->
   <script src="js/modernizr-2.6.2.min.js"></script>
@@ -68,29 +69,17 @@
         <div class="container">
           <div class="nav-header">
             <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-            <h1 id="fh5co-logo"><a href="index.html">LOGO</a></h1>
+            <h1 id="fh5co-logo"><a href="index.html"><img src="assets/puntomx_ico.ico" alt="Logo de Hoteles Punto MX" height="80px" srcset=""></a></h1>
             <nav id="fh5co-menu-wrap" role="navigation">
               <ul class="sf-menu" id="fh5co-primary-menu">
-                <li><a class="active" href="index.html">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li>
-                  <a href="#" class="fh5co-sub-ddown">Hotel</a>
+                  <a href="#" class="active" class="fh5co-sub-ddown">Hotel</a>
                   <ul class="fh5co-sub-menu">
                     <li><a href="rooms.html">Habitaciones</a></li>
                     <li><a href="services.html">Servicios & Amenidades</a></li>
-                    <li><a href="restaurant.html">Restaurante MX</a></li>
+                    <li><a class="active" href="restaurant.html">Restaurante MX</a></li>
                     <li><a href="cafe.html">Café MX</a></li>
-                    <!--<li>
-                        <a href="#" class="fh5co-sub-ddown">King Hotel</a>
-                        <ul class="fh5co-sub-menu">
-                            <li><a href="http://freehtml5.co/preview/?item=build-free-html5-bootstrap-template" target="_blank">Build</a></li>
-                            <li><a href="http://freehtml5.co/preview/?item=work-free-html5-template-bootstrap" target="_blank">Work</a></li>
-                            <li><a href="http://freehtml5.co/preview/?item=light-free-html5-template-bootstrap" target="_blank">Light</a></li>
-                            <li><a href="http://freehtml5.co/preview/?item=relic-free-html5-template-using-bootstrap" target="_blank">Relic</a></li>
-                            <li><a href="http://freehtml5.co/preview/?item=display-free-html5-template-using-bootstrap" target="_blank">Display</a></li>
-                            <li><a href="http://freehtml5.co/preview/?item=sprint-free-html5-template-bootstrap" target="_blank">Sprint</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">Five Star Hotel</a></li>-->
                   </ul>
                 </li>
                 <li><a href="cdmx.html">Conoce la CDMX</a></li>
@@ -104,20 +93,105 @@
 
     </div>
     <!-- end:fh5co-header -->
-    <div class="fh5co-parallax" style="background-image: url(images/slider1.jpg);" data-stellar-background-ratio="0.5">
+    <div class="fh5co-parallax" style="background: linear-gradient( rgba(0, 168, 171, 0.4) 100%, rgba(0, 168, 171, 0.2)100%),url(./assets/webp/RECEPCION.webp); background-size: contain, cover; background-position: 0 bottom,0 bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-md-12 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
             <div class="fh5co-intro fh5co-table-cell">
+              <p>Vive el sabor de la CDMX en nuestro</p>
               <h1 class="text-center">Restaurante MX</h1>
-              <p>Contenido adaptable -  Por definir</p>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <!----------------------------------------------------->
+    <div id="fh5co-counter-section" class="fh5co-counters" style="background-color: var(--color-primario); padding: 1rem 2rem 3rem;">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center myc" >
+            <img src="./assets/logos/restaurante_calado.webp" alt="Logo en blanco del Restaurante MX" style="max-width: 90%;">
+            <p class="fh5co-counter-label" style="color: var(--white); text-transform: none; font-size: 1.5rem; letter-spacing: normal;">México es un país que ofrece una gran variedad de platillos y bebidas hechos con un sin fin de ingredientes que, por su sabor, olor, textura y presentación, pueden enamorar a cualquiera en Punto MX somos sin duda el lugar ideal para visitar, usamos ingredientes frescos en formas imaginativas y creativas para servirte los mejores platillos de la zona, bajo un acogedor ambiente familiar. Y sin duda con un excelente servicio, siempre recibiéndote con una agradable sonrisa y excelente actitud.</p>
+            <p class="fh5co-counter-label" style="color: var(--white); text-transform: none; font-size: 1.5rem; letter-spacing: normal;">Si nos visitas a la hora del desayuno, podrás servirte de un variado buffet; y si piensas en la comida o en la cena, podrás ordenar a la carta todos los días.</p>
+          </div>
 
+          <!--Botón-->
+          <div class="col-md-4 col-md-offset-4">
+            <div class="hotel-content1">
+              <div class="desc" style="justify-content: center; text-align: center;">
+                <p><a href="./files/qr-menu.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">Ver Menú <i class="ti-angle-right"></i></a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!----------------------------------------------------->
+    <!----------------------------------------------------->
+    <div id="fh5co-blog-section" style="padding: 2rem 2rem 3rem;">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="section-title text-center" style="margin-bottom: 30px;">
+              <h2>Galería</h2>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="slider">
+            <ul>
+              <li>
+                <img src="./assets/webp/ROOM_SERVICE.webp" alt="">
+              </li>
+              <li>
+                <img src="./assets/webp/ROOM_SERVICE.webp" alt="">
+              </li>
+              <li>
+                <img src="./assets/webp/ROOM_SERVICE.webp" alt="">
+              </li>
+              <li>
+                <img src="./assets/webp/ROOM_SERVICE.webp" alt="">
+              </li>
+            </ul>
+          </div>
+          <!--<div class="col-md-4">
+            <div class="blog-grid" style="background-image: url(assets/webp/SUITE_CON_JACUZZI.webp); background-size: contain;">
+              <div class="date text-center">
+                <span>09</span>
+                <small>Ago</small>
+              </div>
+            </div>
+            <div class="desc">
+              <h3><a href="#"></a></h3>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="blog-grid" style="background-image: url(assets/webp/AMENIDADES.webp); background-size: contain;">
+              <div class="date text-center">
+                <span>09</span>
+                <small>Ago</small>
+              </div>
+            </div>
+            <div class="desc">
+              <h3><a href="#"></a></h3>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="blog-grid" style="background-image: url(assets/webp/ROOM_SERVICE.webp); background-size: contain;">
+              <div class="date text-center">
+                <span>09</span>
+                <small>Ago</small>
+              </div>
+            </div>
+            <div class="desc">
+              <h3><a href="#"></a></h3>
+            </div>
+          </div>-->
+        </div>
+      </div>
+    </div>
+    <!----------------------------------------------------->
     <div id="fh5co-hotel-section">
     </div>
 
