--- a/rooms.html
+++ b/rooms.html
@@ -201,6 +201,14 @@
               </div>
             </div>
           </div>
+          <!--Botón-->
+          <div class="col-md-4 col-md-offset-4">
+            <div class="hotel-content1">
+              <div class="desc" style="justify-content: center; text-align: center;">
+                <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+              </div>
+            </div>
+          </div>
 
         </div>
       </div>
