--- a/cafe.html
+++ b/cafe.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Cafe MX - Hoteles PUNTO MX</title>
+    <title>Café MX - Hoteles PUNTO MX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Website Hoteles PUNTO MX" />
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA" />
@@ -24,7 +24,7 @@
     <meta name="twitter:card" content="" />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="assets/puntomx_ico.ico">
     <!-- <link href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700italic,900,700,900italic' rel='stylesheet' type='text/css'> -->
 
     <!-- Stylesheets -->
@@ -50,6 +50,7 @@
 
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/slider.css">
 
     <!-- Modernizr JS -->
     <script src="js/modernizr-2.6.2.min.js"></script>
@@ -68,29 +69,18 @@
                 <div class="container">
                     <div class="nav-header">
                         <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-                        <h1 id="fh5co-logo"><a href="index.html">LOGO</a></h1>
+                        <h1 id="fh5co-logo"><a href="index.html"><img src="assets/puntomx_ico.ico" alt="Logo de Hoteles Punto MX" height="80px" srcset=""></a></h1>
                         <nav id="fh5co-menu-wrap" role="navigation">
                             <ul class="sf-menu" id="fh5co-primary-menu">
-                                <li><a class="active" href="index.html">Inicio</a></li>
+                                <li><a href="index.html">Inicio</a></li>
                                 <li>
-                                    <a href="#" class="fh5co-sub-ddown">Hotel</a>
+                                    <a href="#" class="active" class="fh5co-sub-ddown">Hotel</a>
                                     <ul class="fh5co-sub-menu">
                                         <li><a href="rooms.html">Habitaciones</a></li>
                                         <li><a href="services.html">Servicios & Amenidades</a></li>
                                         <li><a href="restaurant.html">Restaurante MX</a></li>
-                                        <li><a href="cafe.html">Café MX</a></li>
-                                        <!--<li>
-                                            <a href="#" class="fh5co-sub-ddown">King Hotel</a>
-                                            <ul class="fh5co-sub-menu">
-                                                <li><a href="http://freehtml5.co/preview/?item=build-free-html5-bootstrap-template" target="_blank">Build</a></li>
-                                                <li><a href="http://freehtml5.co/preview/?item=work-free-html5-template-bootstrap" target="_blank">Work</a></li>
-                                                <li><a href="http://freehtml5.co/preview/?item=light-free-html5-template-bootstrap" target="_blank">Light</a></li>
-                                                <li><a href="http://freehtml5.co/preview/?item=relic-free-html5-template-using-bootstrap" target="_blank">Relic</a></li>
-                                                <li><a href="http://freehtml5.co/preview/?item=display-free-html5-template-using-bootstrap" target="_blank">Display</a></li>
-                                                <li><a href="http://freehtml5.co/preview/?item=sprint-free-html5-template-bootstrap" target="_blank">Sprint</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="#">Five Star Hotel</a></li>-->
+                                        <li><a class="active" href="cafe.html">Café MX</a></li>
+                                        <li><a href="roomservice.html">Room Service</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="cdmx.html">Conoce la CDMX</a></li>
@@ -104,20 +94,112 @@
 
         </div>
         <!-- end:fh5co-header -->
-        <div class="fh5co-parallax" style="background-image: url(images/slider1.jpg);" data-stellar-background-ratio="0.5">
+        <div class="fh5co-parallax" style="background: linear-gradient( rgba(0, 168, 171, 0.4) 100%, rgba(0, 168, 171, 0.2)100%),url(./assets/webp/AMENIDADES_2.webp); background-size: contain, cover; background-position: 0 bottom,right bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
                         <div class="fh5co-intro fh5co-table-cell">
-                            <h1 class="text-center">Cafe MX</h1>
-                            <p>Contenido adaptable -  Por definir</p>
+                            <p>Deja que tus sentidos sean tocados en nuestro</p>
+                            <h1 class="text-center">Café MX</h1>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <!----------------------------------------------------->
+        <div id="fh5co-counter-section" class="fh5co-counters" style="background-color: var(--color-primario); padding: 1rem 2rem 3rem;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 text-center myc" >
+                        <img src="./assets/logos/cafe_calado.webp" alt="Logo en blanco del Restaurante MX" style="max-width: 90%;">
+                        <p class="fh5co-counter-label" style="color: var(--white); text-transform: none; font-size: 1.5rem; letter-spacing: normal;">La tradición en Café MX se ve reflejada como lugar de reunión, para discutir y pasar el tiempo;  no pretendemos ser sólo un sitio para consumir, somos el punto donde, con la excusa del café, se pasa el tiempo. En Café MX te haremos formar parte de casa para que tus sentidos sean tocados por cada bebida que preparamos con amor y dedicación.</p>
+                        <p class="fh5co-counter-label" style="color: var(--white); text-transform: none; font-size: 1.5rem; letter-spacing: normal;text-align: center;">Visítanos y no te arrepentirás de nuestro Café.</p>
+                    </div>
 
+                    <!--Botón-->
+                    <div class="col-md-4 col-md-offset-2">
+                        <div class="hotel-content1">
+                            <div class="desc" style="justify-content: center; text-align: center;">
+                                <p><a href="./files/carta-cafe-esp-qr.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">Ver Menú (Español) <i class="ti-angle-right"></i></a></p>
+                            </div>
+                        </div>
+                    </div><!--Botón-->
+                    <div class="col-md-4">
+                        <div class="hotel-content1">
+                            <div class="desc" style="justify-content: center; text-align: center;">
+                                <p><a href="./files/carta-cafe-ingles-qr.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">Ver Menú (Inglés) <i class="ti-angle-right"></i></a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!----------------------------------------------------->
+        <!----------------------------------------------------->
+        <div id="fh5co-blog-section" style="padding: 2rem 2rem 3rem;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="section-title text-center" style="margin-bottom: 30px;">
+                            <h2>Galería</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="slider">
+                        <ul>
+                            <li>
+                                <img src="./assets/webp/ROOM_SERVICE.webp" alt="">
+                            </li>
+                            <li>
+                                <img src="./assets/webp/ROOM_SERVICE.webp" alt="">
+                            </li>
+                            <li>
+                                <img src="./assets/webp/ROOM_SERVICE.webp" alt="">
+                            </li>
+                            <li>
+                                <img src="./assets/webp/ROOM_SERVICE.webp" alt="">
+                            </li>
+                        </ul>
+                    </div>
+                    <!--<div class="col-md-4">
+                      <div class="blog-grid" style="background-image: url(assets/webp/SUITE_CON_JACUZZI.webp); background-size: contain;">
+                        <div class="date text-center">
+                          <span>09</span>
+                          <small>Ago</small>
+                        </div>
+                      </div>
+                      <div class="desc">
+                        <h3><a href="#"></a></h3>
+                      </div>
+                    </div>
+                    <div class="col-md-4">
+                      <div class="blog-grid" style="background-image: url(assets/webp/AMENIDADES.webp); background-size: contain;">
+                        <div class="date text-center">
+                          <span>09</span>
+                          <small>Ago</small>
+                        </div>
+                      </div>
+                      <div class="desc">
+                        <h3><a href="#"></a></h3>
+                      </div>
+                    </div>
+                    <div class="col-md-4">
+                      <div class="blog-grid" style="background-image: url(assets/webp/ROOM_SERVICE.webp); background-size: contain;">
+                        <div class="date text-center">
+                          <span>09</span>
+                          <small>Ago</small>
+                        </div>
+                      </div>
+                      <div class="desc">
+                        <h3><a href="#"></a></h3>
+                      </div>
+                    </div>-->
+                </div>
+            </div>
+        </div>
+        <!----------------------------------------------------->
         <div id="fh5co-hotel-section">
         </div>
 
@@ -127,7 +209,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="copyright">
-                            <p><small>&copy; Propuesta EKNR<br> Todos los derechos reservados. </small> <br>
+                            <p><small>&copy; Hotel Punto MX<br> Todos los derechos reservados. </small> <br>
                             </p>
                         </div>
                     </div>
@@ -138,17 +220,17 @@
                                 <ul class="link">
                                     <li><a href="#">Acerca de Nosotros</a></li>
                                     <li><a href="#">Sucursal</a></li>
-                                    <li><a href="#">Lorem ipsum</a></li>
-                                    <li><a href="#">Lorem ipsum</a></li>
+                                    <li><a href="#">Bolsa de Trabajo</a></li>
+                                    <li><a href="#">Aviso de Privacidad</a></li>
                                 </ul>
                             </div>
                             <div class="col-md-6">
                                 <h3>Comodidades</h3>
                                 <ul class="link">
-                                    <li><a href="#">Resturant</a></li>
-                                    <li><a href="#">Bars</a></li>
-                                    <li><a href="#">Estacionamiento</a></li>
-                                    <li><a href="#">Pet Friendly</a></li>
+                                    <li><a href="restaurant.html">Resturant MX</a></li>
+                                    <li><a href="cafe.html">Café MX</a></li>
+                                    <li><a href="services.html">Estacionamiento</a></li>
+                                    <li><a href="services.html">Pet Friendly</a></li>
                                     <!--<li><a href="#">5item</a></li>
                                     <li><a href="#">6item</a></li>-->
                                 </ul>
@@ -168,10 +250,11 @@
                     <div class="col-md-3">
                         <ul class="social-icons">
                             <li>
-                                <a href="#"><i class="icon-twitter-with-circle"></i></a>
-                                <a href="#"><i class="icon-facebook-with-circle"></i></a>
-                                <a href="#"><i class="icon-instagram-with-circle"></i></a>
-                                <a href="#"><i class="icon-linkedin-with-circle"></i></a>
+                                <a href="https://twitter.com/hotel_puntomx?lang=es" target="_blank"><i class="icon-twitter-with-circle"></i></a>
+                                <a href="https://www.facebook.com/HotelPuntoMX/" target="_blank"><i class="icon-facebook-with-circle"></i></a>
+                                <a href="https://www.instagram.com/hotelpuntomx/" target="_blank"><i class="icon-instagram-with-circle"></i></a>
+                                <!--<a href="#"><i class="fa fa-tripadvisor"></i></a>-->
+                                <!--<a href="#"><i class="icon-linkedin-with-circle"></i></a>-->
                             </li>
                         </ul>
                     </div>
