--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 								 	<li><a href="services.html">Servicios & Amenidades</a></li>
 								 	<li><a href="restaurant.html">Restaurante MX</a></li>
 								 	<li><a href="cafe.html">Café MX</a></li>
+								 	<li><a href="roomservice.html">Room Service</a></li>
 									<!--<li>
 										<a href="#" class="fh5co-sub-ddown">King Hotel</a>
 										<ul class="fh5co-sub-menu">
@@ -556,8 +557,8 @@
 						<div class="col-md-6">
 							<h3>Comodidades</h3>
 							<ul class="link">
-								<li><a href="restaurant.html">Resturant</a></li>
-								<li><a href="cafe.html">Cafetería</a></li>
+								<li><a href="restaurant.html">Resturant MX</a></li>
+								<li><a href="cafe.html">Café MX</a></li>
 								<li><a href="services.html">Estacionamiento</a></li>
 								<li><a href="services.html">Pet Friendly</a></li>
 								<!--<li><a href="#">5item</a></li>
