--- a/restaurant.html
+++ b/restaurant.html
@@ -80,6 +80,7 @@
                     <li><a href="services.html">Servicios & Amenidades</a></li>
                     <li><a class="active" href="restaurant.html">Restaurante MX</a></li>
                     <li><a href="cafe.html">Café MX</a></li>
+                    <li><a href="roomservice.html">Room Service</a></li>
                   </ul>
                 </li>
                 <li><a href="cdmx.html">Conoce la CDMX</a></li>
@@ -201,7 +202,7 @@
         <div class="row">
           <div class="col-md-3">
             <div class="copyright">
-              <p><small>&copy; Propuesta EKNR<br> Todos los derechos reservados. </small> <br>
+              <p><small>&copy; Hotel Punto MX<br> Todos los derechos reservados. </small> <br>
               </p>
             </div>
           </div>
@@ -212,17 +213,17 @@
                 <ul class="link">
                   <li><a href="#">Acerca de Nosotros</a></li>
                   <li><a href="#">Sucursal</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
+                  <li><a href="#">Bolsa de Trabajo</a></li>
+                  <li><a href="#">Aviso de Privacidad</a></li>
                 </ul>
               </div>
               <div class="col-md-6">
                 <h3>Comodidades</h3>
                 <ul class="link">
-                  <li><a href="#">Resturant</a></li>
-                  <li><a href="#">Bars</a></li>
-                  <li><a href="#">Estacionamiento</a></li>
-                  <li><a href="#">Pet Friendly</a></li>
+                  <li><a href="restaurant.html">Resturant MX</a></li>
+                  <li><a href="cafe.html">Café MX</a></li>
+                  <li><a href="services.html">Estacionamiento</a></li>
+                  <li><a href="services.html">Pet Friendly</a></li>
                   <!--<li><a href="#">5item</a></li>
                   <li><a href="#">6item</a></li>-->
                 </ul>
@@ -242,10 +243,11 @@
           <div class="col-md-3">
             <ul class="social-icons">
               <li>
-                <a href="#"><i class="icon-twitter-with-circle"></i></a>
-                <a href="#"><i class="icon-facebook-with-circle"></i></a>
-                <a href="#"><i class="icon-instagram-with-circle"></i></a>
-                <a href="#"><i class="icon-linkedin-with-circle"></i></a>
+                <a href="https://twitter.com/hotel_puntomx?lang=es" target="_blank"><i class="icon-twitter-with-circle"></i></a>
+                <a href="https://www.facebook.com/HotelPuntoMX/" target="_blank"><i class="icon-facebook-with-circle"></i></a>
+                <a href="https://www.instagram.com/hotelpuntomx/" target="_blank"><i class="icon-instagram-with-circle"></i></a>
+                <!--<a href="#"><i class="fa fa-tripadvisor"></i></a>-->
+                <!--<a href="#"><i class="icon-linkedin-with-circle"></i></a>-->
               </li>
             </ul>
           </div>
