--- a/roomservice.html
+++ b/roomservice.html
@@ -1,10 +1,209 @@
 <!DOCTYPE html>
-<html lang="en">
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Room Service - Hotel PUNTO MX</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Website Hoteles PUNTO MX" />
+    <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA" />
+    <meta name="author" content="eknr" />
+
+    <!-- Facebook and Twitter integration -->
+    <meta property="og:title" content=""/>
+    <meta property="og:image" content=""/>
+    <meta property="og:url" content=""/>
+    <meta property="og:site_name" content=""/>
+    <meta property="og:description" content=""/>
+    <meta name="twitter:title" content="" />
+    <meta name="twitter:image" content="" />
+    <meta name="twitter:url" content="" />
+    <meta name="twitter:card" content="" />
+
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <link rel="shortcut icon" href="assets/puntomx_ico.ico">
+    <!-- <link href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700italic,900,700,900italic' rel='stylesheet' type='text/css'> -->
+
+    <!-- Stylesheets -->
+    <!-- Dropdown Menu -->
+    <link rel="stylesheet" href="css/superfish.css">
+    <!-- Owl Slider -->
+    <!-- <link rel="stylesheet" href="css/owl.carousel.css"> -->
+    <!-- <link rel="stylesheet" href="css/owl.theme.default.min.css"> -->
+    <!-- Date Picker -->
+    <link rel="stylesheet" href="css/bootstrap-datepicker.min.css">
+    <!-- CS Select -->
+    <link rel="stylesheet" href="css/cs-select.css">
+    <link rel="stylesheet" href="css/cs-skin-border.css">
+
+    <!-- Themify Icons -->
+    <link rel="stylesheet" href="css/themify-icons.css">
+    <!-- Flat Icon -->
+    <link rel="stylesheet" href="css/flaticon.css">
+    <!-- Icomoon -->
+    <link rel="stylesheet" href="css/icomoon.css">
+    <!-- Flexslider  -->
+    <link rel="stylesheet" href="css/flexslider.css">
+
+    <!-- Style -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/slider.css">
+
+    <!-- Modernizr JS -->
+    <script src="js/modernizr-2.6.2.min.js"></script>
+    <!-- FOR IE9 below -->
+    <!--[if lt IE 9]>
+    <script src="js/respond.min.js"></script>
+    <![endif]-->
+
 </head>
 <body>
+
+<div id="fh5co-wrapper">
+    <div id="fh5co-page">
+        <div id="fh5co-header">
+            <header id="fh5co-header-section">
+                <div class="container">
+                    <div class="nav-header">
+                        <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
+                        <h1 id="fh5co-logo"><a href="index.html"><img src="assets/puntomx_ico.ico" alt="Logo de Hoteles Punto MX" height="80px" srcset=""></a></h1>
+                        <nav id="fh5co-menu-wrap" role="navigation">
+                            <ul class="sf-menu" id="fh5co-primary-menu">
+                                <li><a href="index.html">Inicio</a></li>
+                                <li>
+                                    <a href="#" class="active" class="fh5co-sub-ddown">Hotel</a>
+                                    <ul class="fh5co-sub-menu">
+                                        <li><a href="rooms.html">Habitaciones</a></li>
+                                        <li><a href="services.html">Servicios & Amenidades</a></li>
+                                        <li><a class="active" href="restaurant.html">Restaurante MX</a></li>
+                                        <li><a href="cafe.html">Café MX</a></li>
+                                        <li><a href="roomservice.html">Room Service</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="cdmx.html">Conoce la CDMX</a></li>
+                                <!--<li><a href="blog.html">Blog</a></li>-->
+                                <li><a href="contact.html">Contacto</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </header>
+
+        </div>
+        <!-- end:fh5co-header -->
+        <div class="fh5co-parallax" style="background: linear-gradient( rgba(0, 168, 171, 0.4) 100%, rgba(0, 168, 171, 0.2)100%),url(./assets/webp/ROOM_SERVICE.webp); background-size: contain, cover; background-position: 0 bottom,right bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
+                        <div class="fh5co-intro fh5co-table-cell">
+                            <p>Disfruta de la comodidad de tu estancia con nuestro</p>
+                            <h1 class="text-center">Room Service</h1>
+                        </div>
+                    </div>
+                    <!--Botón-->
+                    <div class="col-md-4 col-md-offset-4" style="margin-top: -40px;">
+                        <div class="hotel-content1">
+                            <div class="desc" style="justify-content: center; text-align: center;">
+                                <p><a href="./files/menu-roomservice-qr.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">Room Service<i class="ti-angle-right"></i></a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <footer id="footer" class="fh5co-bg-color">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="copyright">
+                            <p><small>&copy; Hotel Punto MX<br> Todos los derechos reservados. </small> <br>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3>Compañía</h3>
+                                <ul class="link">
+                                    <li><a href="#">Acerca de Nosotros</a></li>
+                                    <li><a href="#">Sucursal</a></li>
+                                    <li><a href="#">Bolsa de Trabajo</a></li>
+                                    <li><a href="#">Aviso de Privacidad</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-md-6">
+                                <h3>Comodidades</h3>
+                                <ul class="link">
+                                    <li><a href="restaurant.html">Resturant MX</a></li>
+                                    <li><a href="cafe.html">Café MX</a></li>
+                                    <li><a href="services.html">Estacionamiento</a></li>
+                                    <li><a href="services.html">Pet Friendly</a></li>
+                                    <!--<li><a href="#">5item</a></li>
+                                    <li><a href="#">6item</a></li>-->
+                                </ul>
+                            </div>
+                            <!--<div class="col-md-6">
+                                <h3>Subscribe</h3>
+                                <p>Sed cursus ut nibh in semper. Mauris varius et magna in fermentum. </p>
+                                <form action="#" id="form-subscribe">
+                                    <div class="form-field">
+                                        <input type="email" placeholder="Email Address" id="email">
+                                        <input type="submit" id="submit" value="Send">
+                                    </div>
+                                </form>
+                            </div>-->
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <ul class="social-icons">
+                            <li>
+                                <a href="https://twitter.com/hotel_puntomx?lang=es" target="_blank"><i class="icon-twitter-with-circle"></i></a>
+                                <a href="https://www.facebook.com/HotelPuntoMX/" target="_blank"><i class="icon-facebook-with-circle"></i></a>
+                                <a href="https://www.instagram.com/hotelpuntomx/" target="_blank"><i class="icon-instagram-with-circle"></i></a>
+                                <!--<a href="#"><i class="fa fa-tripadvisor"></i></a>-->
+                                <!--<a href="#"><i class="icon-linkedin-with-circle"></i></a>-->
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+    </div>
+    <!-- END fh5co-page -->
+
+</div>
+
+<!-- Javascripts -->
+<script src="js/jquery-2.1.4.min.js"></script>
+<!-- Dropdown Menu -->
+<script src="js/hoverIntent.js"></script>
+<script src="js/superfish.js"></script>
+<!-- Bootstrap -->
+<script src="js/bootstrap.min.js"></script>
+<!-- Waypoints -->
+<script src="js/jquery.waypoints.min.js"></script>
+<!-- Counters -->
+<script src="js/jquery.countTo.js"></script>
+<!-- Stellar Parallax -->
+<script src="js/jquery.stellar.min.js"></script>
+<!-- Owl Slider -->
+<!-- // <script src="js/owl.carousel.min.js"></script> -->
+<!-- Date Picker -->
+<script src="js/bootstrap-datepicker.min.js"></script>
+<!-- CS Select -->
+<script src="js/classie.js"></script>
+<script src="js/selectFx.js"></script>
+<!-- Flexslider -->
+<script src="js/jquery.flexslider-min.js"></script>
+
+<script src="js/custom.js"></script>
 
 </body>
 </html>
