--- a/cafe.html
+++ b/cafe.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Website Hoteles PUNTO MX" />
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA" />
     <meta name="author" content="eknr" />
-
+    <!--Completado-->
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content=""/>
     <meta property="og:image" content=""/>
