--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 	<meta name="description" content="Website Hoteles PUNTO MX" />
 	<meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA" />
 	<meta name="author" content="eknr" />
-
+		<!--Completado-->
   	<!-- FontAwesomeKit -->
 	<script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
   	<!-- Facebook and Twitter integration -->
+
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
 	<meta property="og:url" content=""/>
